<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LoginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="48dp"
    android:background="@drawable/gradient_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />


            <!-- LOGIN -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="6dp"
                    android:contentDescription="@string/image_missing"
                    android:padding="10dp"
                    android:src="@drawable/registration_icon_email">
                </ImageView>

                <EditText
                    android:id="@+id/loginEmailField"
                    android:layout_width="225dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:ems="10"
                    android:hint="@string/wpisz_e_mail"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </LinearLayout>
            <!-- PASSWORD -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="6dp"
                    android:contentDescription="@string/image_missing"
                    android:padding="10dp"
                    android:src="@drawable/registration_icon_password">
                </ImageView>

                <EditText
                    android:id="@+id/loginPasswordField"
                    android:layout_width="225dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:autofillHints=""
                    android:background="@drawable/custom_edittext"
                    android:ems="10"
                    android:hint="@string/wpisz_haslo"
                    android:inputType="textPassword"
                    android:padding="10dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/login_registerAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_no_acc"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/button_bg"
                android:text="@string/zaloguj"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/login_passwordReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>